# devrs

./: .gitignore  ARCHITECTURE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TROUBLESHOOTING.md  config.toml  config_example.toml
.github/workflows/: pages.yml  test.yml
blueprints/cpp/: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
blueprints/cpp/src/: CMakeLists.txt
blueprints/cpp/src/chatbot_lib/: CMakeLists.txt  chatbot.cpp  chatbot.h
blueprints/cpp/src/main/: CMakeLists.txt  main.cpp
blueprints/go/: Dockerfile  Makefile  README.md  go.mod
blueprints/go/src/: main.go
blueprints/go/src/chatbot/: chatbot.go  chatbot_test.go
blueprints/rust/: Cargo.toml  Dockerfile  Makefile  README.md
blueprints/rust/src/: chatbot.rs  lib.rs  main.rs
blueprints/rust/tests/: chatbot_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/commands/blueprint/: create.rs  info.rs  list.rs  mod.rs
cli/src/commands/blueprint/utils/: mod.rs  project_detector.rs  tree_printer.rs
cli/src/commands/container/: build.rs  logs.rs  mod.rs  rm.rs  rmi.rs  run.rs  shell.rs  status.rs  stop.rs
cli/src/commands/env/: build.rs  exec.rs  logs.rs  mod.rs  prune.rs  rebuild.rs  shell.rs  status.rs  stop.rs
cli/src/commands/setup/: all.rs  config.rs  dependencies.rs  deps.rs  integrate.rs  mod.rs  nvim.rs  shell.rs
cli/src/commands/srv/: config.rs  mod.rs  server_logic.rs  utils.rs
cli/src/common/: mod.rs  process.rs
cli/src/common/archive/: compression.rs  mod.rs  tar.rs
cli/src/common/docker/: connect.rs  images.rs  interaction.rs  lifecycle.rs  mod.rs  operations.rs  state.rs
cli/src/common/fs/: copy.rs  io.rs  links.rs  mod.rs
cli/src/common/network/: mod.rs
cli/src/common/system/: mod.rs
cli/src/common/ui/: mod.rs
cli/src/core/: config.rs  error.rs  mod.rs  templating.rs
cli/tests/: blueprint.rs  common.rs  container.rs  env.rs  main_tests.rs  setup.rs  srv.rs
config/: Dockerfile.base  bashrc  shell_functions  zshrc
presets/: Dockerfile.devrs  config_sample.toml  init.lua  shell_functions
web/: index.html
web/css/: main.css  matrix.css  mobile.css
web/js/: main.js
